After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 621683 - gtk_menu_attach_to_widget() should emit an "attach-widget" signal.
gtk_menu_attach_to_widget() should emit an "attach-widget" signal.
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: Other
2.90.x
Other All
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2010-06-15 18:18 UTC by Ayan George
Modified: 2010-06-16 18:27 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch to gtk/gtkmenu.c to make gtk_menu_attach_to_widget() emit an "attach-widget" event. (351 bytes, patch)
2010-06-15 18:18 UTC, Ayan George
committed Details | Review

Description Ayan George 2010-06-15 18:18:43 UTC
Created attachment 163709 [details] [review]
Patch to gtk/gtkmenu.c to make gtk_menu_attach_to_widget() emit an "attach-widget" event.

I've included a patch to gtk/gtkmenu.c that has gtk_menu_attach_to_widget() emit "attach-widget" to the menu being connected to.
Comment 1 Matthias Clasen 2010-06-16 12:44:25 UTC
Comment on attachment 163709 [details] [review]
Patch to gtk/gtkmenu.c to make gtk_menu_attach_to_widget() emit an "attach-widget" event.

Looks right
Comment 2 Javier Jardón (IRC: jjardon) 2010-06-16 18:27:05 UTC
Comment on attachment 163709 [details] [review]
Patch to gtk/gtkmenu.c to make gtk_menu_attach_to_widget() emit an "attach-widget" event.

commit 318fa1e1799792e9eaeffcf4b19fb4140549e901
Comment 3 Javier Jardón (IRC: jjardon) 2010-06-16 18:27:14 UTC
This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.