[gtk/gtkmenu] Emit an "attach-widget" event in gtk_menu_attach_to_widget()

Reported by ageorge@datasys.net in bug
Fixes https://bugzilla.gnome.org/show_bug.cgi?id=621683
(cherry picked from commit 318fa1e1799792e9eaeffcf4b19fb4140549e901)